<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvBitacoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/fuente"
        android:text="@string/tvBitacoras" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tvFecha"
            android:textAlignment="center"
            android:fontFamily="@font/robotobold"
            android:textSize="25dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:padding="2dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btnVisitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:padding="25dp"
                android:text="@string/btnVisitante" />

            <Button
                android:id="@+id/btnVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:padding="25dp"
                android:text="@string/btnVehiculo" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btnMensajeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:padding="25dp"
                android:text="@string/btnMensajeria" />

            <Button
                android:id="@+id/btnSalida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:padding="25dp"
                android:text="@string/btnSalida" />
        </TableRow>

    </LinearLayout>

</FrameLayout>