<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ssh" />

        <TextView
            android:id="@+id/tvLoginDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:text="@string/loginDescription"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo Electrónico"
            android:layout_marginTop="24dp"
            app:hintTextColor="@color/yellow"
            android:background="@color/background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:helperTextEnabled="true"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textEmailAddress"
                android:maxLength="4000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:layout_marginTop="24dp"
            app:hintTextColor="@color/yellow"
            android:background="@color/background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:helperTextEnabled="true"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textPassword"
                android:maxLength="4000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginOlvidoPass"
            android:text="@string/olvidoPass"
            android:textColor="@color/white"
            android:autoSizeMinTextSize="48dp"
            android:layout_marginBottom="70dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:clickable="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrarse"
            android:text="@string/btnRegistrarse"
            android:textColor="@color/white"
            android:autoSizeMinTextSize="48dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:clickable="true"
            />

        <Button
            android:id="@+id/btnIngresarApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/btnIniciar"
            android:textSize="12sp" />


    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <include
            layout="@layout/shimmer_layout"
            tools:visibility="gone" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</RelativeLayout>
</ScrollView>